fix overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
-
+/* *{
+    overflow-x: hidden;
+} */
 
 @font-face {
     font-family: "Playfair Display";
